# svirlpool

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  pyproject.toml  release-please-config.json  reproduce_issue.py  test_ref_to_read.py  test_ref_to_read_rev.py
.github/: semantic-commit.txt
.github/workflows/: docker-build.yml  docker-cleanup.yml  main.yml  release-please.yml  update-lockfile.yml
data/lamassemble-mats/: LICENSE  promethion-rna.mat  promethion.mat  sequel-II-CLR.mat
data/pbsv-trf-tracks/: human_hs37d5.trf.with_index.bed
examples/muc1/: muc1.bed  muc1.mononucleotides.lt6.bed  muc1.trf.bed  muc1.unique.bed  transform.sh
examples/muc1/data/: muc1.bam  muc1.bam.bai  muc1.fa  muc1.fa.fai  muc1.mononucleotides.lt6.bed  muc1.trf.bed  muc1.unique.bed
src/svirlpool/: __init__.py  __main__.py  version.py
src/svirlpool/analysis/: align_consensus_results.py  align_single_trimmed_read_clusters.py  alignment_stats.py  barplot_mendelian_consistency.py  get_local_signal_stats.py  mendelian_consistency.py  multiple_raf_stats.py  sample_seq_plots.py  sample_seq_stats.py
src/svirlpool/candidateregions/: QC_crs.py  crs_to_batches.py  crs_to_bed.py  crs_to_containers_db.py  signalstrength_to_crs.py
src/svirlpool/debugtools/: build_reduced_reference.py  check_crs_consensus_completeness.py  check_vcf_correctness.py  consensus_stats.py  crs_stats.py  log_search.py  log_search_svcalling.py  subset_data.py  svPatterns_to_bed.py  trace-sv-calling-decisions.py
src/svirlpool/localassembly/: SVpatterns.py  SVprimitives.py  align_consensus_results.py  clustering_lib.py  consensus.py  consensus_align.py  consensus_align_lib.py  consensus_class.py  consensus_containers_to_db.py  consensus_lib.py  read_cache.py  svirltile.py
src/svirlpool/misc/: Intervaltree_performance_test.py  Mendelian_consistency.py  QC_compare_beds.py  QC_crs_print_readcounts.py  QC_rafs.py  aln_and_calc_depth.py  bedfile_of_Ns.py  benchmark_HG002_giab.sh  build_project.py  clustering_ava_based.py  consensus_stats.py  create_benchmark_sub_data_set.py  cut_reads.py  debug_consensus.py  debug_consensus_alignments.py  debug_signal_processing.py  dev_consensus.py  dev_consensus_padding.py  dev_get_simple_indels.py  develop SV specification.py  download_ont.sh  filter_bam_for_incomplete_reads.py  find_bnd_sizes.py  format_truvari_summaries.py  generate_regions_test_from_svirlpool_results.py  get_sv_candidates.py  informative_loci_statistics.py  loop_bam.py  mendel_dataanalysis.py  mendel_tables.py  mendelian_consistency.py  merge_databases.py  mononucleotides_to_bed  new_approach.py  open_consensus_container.py  params_tuning_signal_to_crs.py  parse_consensus_log_times.py  plot_minimap_SV_performance_results.py  plot_sequence_complexity_over_different_k.py  prepare_consensus_tests.py  (+17 more)
src/svirlpool/perform/: seqomplexity.pxd  seqomplexity.pyx  seqomplexity_wrapper.cpp  sequence_complexity.cpp
src/svirlpool/preparation/: mononucleotides_to_bed.cpp  unique_regions.py
src/svirlpool/scripts/: MergedSVs.py  QC_crs.py  QC_rafs.py  SVComplexes.py  SVcomposite.py  SVpatterns.py  SVprimitive_class.py  SVprimitives.py  align_consensus_to_reference.py  alignments_to_rafs.py  alignments_to_sampledicts.py  bams_to_raf.py  bed_chrID_to_chr.py  bed_chr_to_chrID.py  combine_databases.py  complexity_track.py  consensus.py  consensus_align.py  consensus_align_lib.py  consensus_class.py  consensus_containers_to_db.py  consensus_legacy.py  consensuses_to_svprimitives.py  copynumber_tracks.py  covtree.py  crs_to_bed.py  crs_to_connections.py  crs_to_containers_db.py  crs_to_dbs.py  cut_reads_from_alns.py  datastructures.py  datatypes.py  deleteme.sv_calling.py  filter_nonseparated.py  filter_rafs.py  filter_rafs_indels.py  filter_rafs_sv_signals.py  filter_signal_badreads.py  filter_signal_mononucleotides.py  filter_signaldepth.py  (+26 more)
src/svirlpool/signalprocessing/: QC_rafs.py  alignments_to_rafs.py  copynumber_tracks.py  filter_nonseparated.py  filter_rafs.py  filter_rafs_indels.py  filter_rafs_sv_signals.py  filter_signal_mononucleotides.py  filter_signaldepths.py  filter_signaldepths_mononucleotides.py  rafs_indel_histograms.py  rafs_to_coverage.py  rafs_to_signaldepths.py  signaldepths_to_signalstrength.py
src/svirlpool/svcalling/: SVcomposite.py  genotyping.py  multisample_sv_calling.py  svcomposite_merging.py  svcomposite_utils.py
src/svirlpool/util/: bed_chr_to_chrID.py  combine_databases.py  covtree.py  datatypes.py  signal_loss_logger.py  svpatterns_to_vcf.py  util.py
src/svirlpool/workflows/: main.smk
tests/: test_SVcalling.py  test_SVpatterns.py  test_add_genotype_measurements.py  test_alignments_to_rafs.py  test_bed_chr_to_chrID.py  test_can_merge_svComposites.py  test_check_crs_consensus_completeness_example.py  test_check_vcf_correctness_example.py  test_consensus.py  test_consensus_align.py  test_consensus_class.py  test_consensus_lib_importance_densities.py  test_consensus_lib_pairwise_distance.py  test_covtrees.py  test_crs_to_batches.py  test_filter_signaldepths_mononucleotides.py  test_hello_world.py  test_log_search.py  test_read_cache.py  test_read_cutting.py  test_rnd.py
tests/data/consensus/: consensus_padding.11.0.json  consensus_padding.11.1.json  test_trimming_alignments.bam  test_trimming_alignments.bam.bai  test_trimming_reads.fasta  test_trimming_ref.fasta  test_trimming_ref.fasta.fai
tests/data/consensus_class/: INV.15.consensus_interval.bed  INV.15.consensus_interval_singles.bed  INV.7.alignments.json  INV.7.consensus.json  INV.7.consensus_interval.bed  INV.7.consensus_interval_singles.bed  inv.11.aln0.readpos.bed  inv.11.aln1.readpos.bed  inv.11.aln2.readpos.bed  inv.11.bam  inv.11.bam.bai
tests/data/read_cutting/: long_rev.2.bam  long_rev.bam  platinum.bam  platinum.bam.bai
tests/data/signalprocessing/: real_inversion_balanced.bam  real_inversion_balanced.bam.bai  short.bam  short.bam.bai  test_signaldepths_matching.tsv  (+1 more)
utils/: release-example.sh
utils/docker/: Dockerfile  build-docker.sh
(+5 files in other folders)
