[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "svirlpool"
authors = [{ name = "Vinzenz May", email = "vinzenz.may@bih-charite.de" }]
description = "Svirlpool: structural variant detection from long read sequencing by local assembly"
version = "0.1.0"
readme = "README.md"
keywords = ["bioinformatics"]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["numpy>=2.3.4,<3", "pandas>=2.3.3,<3", "matplotlib>=3.10.7,<4", "scipy>=1.16.3,<2", "scikit-learn>=1.7.2,<2", "biopython>=1.86,<2", "plotly>=6.3.1,<7", "tqdm>=4.67.1,<5", "attrs>=25.4.0,<26", "cattrs>=25.3.0,<26", "intervaltree>=3.1.0,<4", "vcfpy>=0.14.2,<0.15", "pyyaml>=6.0.3,<7", "typer>=0.20.0,<0.21", "rich", "pydantic>=2.12.3,<3", "requests>=2.32.5,<3", "click", "setuptools~=70.0.0", "snakemake>=9.13.4,<10", "xxhash>=0.8.3"]

[project.scripts]
svirlpool = "svirlpool.__main__:main"

[project.urls]
Homepage = "https://github.com/bihealth/svirlpool"
Issues = "https://github.com/bihealth/svirlpool/issues"
Source = "https://github.com/bihealth/svirlpool"

[tool.hatch.version]
path = "src/svirlpool/__init__.py"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "freezegun>=1.5.1",
    "hatch>=1.14.0",
    "jupyter>=1.1.0",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
    "pytest-sugar>=1.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.1",
    "syrupy>=4.8.1",
]

[tool.hatch.envs.quality]

[tool.hatch.envs.quality.scripts]
check = [
  "ruff format --check --diff --preview src tests",
  "ruff check --preview src tests",
]
format = [
  "ruff format --preview src tests",
  "ruff check --preview --fix src tests",
  "check",
]
typecheck = [
  """
  pyright --pythonpath="$(pixi run python -c 'import sys; print(sys.executable)')" \
    {args:src/ tests/}
  """
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
typeCheckingMode = "basic"
defineConstant = { DEBUG = true }
stubPath = "stubs"

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.ruff]
lint.ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  # the following are known issues in generated code
  "E721", # is vs. ==
  "C409", # Unnecessary list literal
  "B904", # raise from e not used
  "C405", # Unnecessary list literal (rewrite as set literal)
  "F403", # does not allow from {name} import *
  "F405", # does not allow from {name} import *
]
lint.select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["svirlpool"]

[tool.hatch.envs.tests]

[tool.hatch.envs.tests.scripts]
run = "pytest --cov=svirlpool --cov-report=term-missing tests/ --durations 0 -s {args:tests}"
run-snapshot = "run --snapshot-update"

[tool.hatch.envs.build]

[tool.hatch.envs.build.scripts]
run = "hatch build"

[tool.hatch.envs.targets]

# NB: activating this will break in `pixi run`.
# [tool.hatch.build]
# include = [
#     "src/**/*.py",
#     "src/**/py.typed",
# ]

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
filterwarnings = [
]

[tool.semantic_release]
version_variables = [
  "src/svirlpool/__init__.py:__version__",
]
version_toml = [
  "pyproject.toml:project.version",
]

[tool.pixi.workspace]
channels = [
  "conda-forge",
  "bioconda",
]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
svirlpool = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12"
hatch = ">=1.14.0"
go-shfmt = "*"
bedtools = "~=2.31"
minimap2 = "~=2.28"
lamassemble = "~=1.7.2"
pysam = ">=0.23.3,<0.24"
bcftools = "~=1.20"
samtools = "~=1.20"
seqtk = "~=1.4"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
check = "ruff check --preview src tests && shfmt -i 4 -d **/*.sh"
format = "ruff format --preview src tests && ruff check --preview --fix src tests && shfmt -i 4 -w **/*.sh"
typecheck = "pyright src/ tests/"
test = "pytest --cov=svirlpool --cov-report=term-missing tests/ --durations 0 -s"
test-snapshot = "pytest --cov=svirlpool tests/ --snapshot-update"
build = "hatch build"

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = ">=0.0.9,<0.0.10"
